--- a/pages/bottoms/bottoms.html
+++ b/pages/bottoms/bottoms.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>하의 쇼핑몰</title>
-    <link rel="stylesheet" href="bottoms.css" />
+    <link rel="stylesheet" href="./bottoms.css" />
   </head>
   <body>
     <header>
