--- a/pages/goods/goods.html
+++ b/pages/goods/goods.html
@@ -11,32 +11,32 @@
 
     <div class="container">
       <div class="item">
-        <img src="img/acc1.jpg" alt="없어용" />
+        <img src="img/acc1.jpg" alt="대체 문구" />
         <div class="price">₩15,000</div>
         <div class="description">모노 베이직 빅사이즈 볼캡</div>
       </div>
       <div class="item">
-        <img src="img/acc2.jpg" alt="없어용" />
+        <img src="img/acc2.jpg" alt="대체 문구" />
         <div class="price">₩25,000</div>
         <div class="description">리플리 데일리 socks</div>
       </div>
       <div class="item">
-        <img src="img/acc3.jpg" alt="없어용" />
+        <img src="img/acc3.jpg" alt="대체 문구" />
         <div class="price">₩10,000</div>
         <div class="description">모노 파리 빅사이즈 볼캡</div>
       </div>
       <div class="item">
-        <img src="img/acc4.jpg" alt="없어용" />
+        <img src="img/acc4.jpg" alt="대체 문구" />
         <div class="price">₩30,000</div>
         <div class="description">플리타 심플 레더벨트</div>
       </div>
       <div class="item">
-        <img src="img/acc5.jpg" alt="없어용" />
+        <img src="img/acc5.jpg" alt="대체 문구" />
         <div class="price">₩20,000</div>
         <div class="description">모노 베어 빅사이즈 볼캡</div>
       </div>
       <div class="item">
-        <img src="img/acc6.jpg" alt="없어용" />
+        <img src="img/acc6.jpg" alt="대체 문구" />
         <div class="price">₩12,000</div>
         <div class="description">로엠 레더 로퍼</div>
       </div>
