이미지 파일명 수정

--- a/pages/top/top.html
+++ b/pages/top/top.html
@@ -20,12 +20,12 @@
             <p>₩39,900</p>
         </div>
         <div class="product-card">
-            <img src="img/청셔.png" alt="청셔츠">
+            <img src="img/청셔츠.png" alt="청셔츠">
             <h3>남색인데 원단이 청인.</h3>
             <p>₩49,900</p>
         </div>
         <div class="product-card">
-            <img src="img/후드.png" alt="후드티">
+            <img src="img/후드티.png" alt="후드티">
             <h3>맨투맨에 모자가 달린</h3>
             <p>₩49,900</p>
         </div>
