Fix : 가격 text 수정

--- a/pages/blanket/blanket.html
+++ b/pages/blanket/blanket.html
@@ -20,7 +20,7 @@
               [수면공감] NEW 알러지 케어 항균 이불 세트 Peach skin
             </h3>
             <div class="price-shop">
-              <div class="price">89,000</div>
+              <div class="price">\89,000</div>
               <div class="shop">수면공감</div>
             </div>
           </div>
@@ -28,7 +28,7 @@
             <img src="./img/순면이불.jpg" alt="이불 2" />
             <h3 class="item-title">100% 순면이불</h3>
             <div class="price-shop">
-              <div class="price">29,000</div>
+              <div class="price">\29,000</div>
               <div class="shop">센스맘 공식몰</div>
             </div>
           </div>
@@ -41,7 +41,7 @@
               부드러운 드마카롱 피스타치오 60수 순면 차렵이불
             </h3>
             <div class="price-shop">
-              <div class="price">59,900</div>
+              <div class="price">\59,900</div>
               <div class="shop">누비지오</div>
             </div>
           </div>
@@ -54,7 +54,7 @@
               덮는순간 스르륵 네이비 알러지케어 차렵이불
             </h3>
             <div class="price-shop">
-              <div class="price">69,900</div>
+              <div class="price">\69,900</div>
               <div class="shop">누비지오</div>
             </div>
           </div>
