--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shop</title>
   </head>
-  <body></body>
+  <body>
+    <a href="./pages/blanket/blanket.html">이불</a>
+  </body>
 </html>
