--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shop</title>
   </head>
-  <body></body>
+  <body>
+    <a href="pages/bottoms/bottoms.html">하의</a>
+  </body>
 </html>
