[FEAT] : 잡화 페이지 이동 링크 추가

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <a href="./pages/blanket/blanket.html">이불</a>
-  </body>
+    <a href="./pages/goods/goods.html">ACC</a> 
+ </body>
 </html>
