Feat: index.html에 하의 페이지 링크 추가

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <a href="./pages/blanket/blanket.html">이불</a>
-    <a href="./pages/goods/goods.html">ACC</a> 
- </body>
+    <a href="./pages/goods/goods.html">ACC</a>
+    <a href="./pages/bottoms/bottoms.html">상의</a>
+  </body>
 </html>
