--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <a href="./pages/blanket/blanket.html">이불</a>
     <a href="./pages/goods/goods.html">ACC</a>
     <a href="./pages/bottoms/bottoms.html">상의</a>
+    <a href="./pages/top/top.html">상의</a>
   </body>
 </html>
