Fix: index.html과 README.md 오타 수정

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <a href="./pages/blanket/blanket.html">이불</a>
     <a href="./pages/goods/goods.html">ACC</a>
-    <a href="./pages/bottoms/bottoms.html">상의</a>
+    <a href="./pages/bottoms/bottoms.html">하의</a>
     <a href="./pages/top/top.html">상의</a>
   </body>
 </html>
